# lichie

./: .gitignore  .magicindex.json  ClassiqueImpedance.py  Dynamic_Puma.py  README.md  deps.repos  dynamics.py  dynamics_p560.py  examplePanda.py
Cohoma/: CMakeLists.txt  Readme.txt  manipulator.rl
Cohoma/Example_CartesianControl/src/: Example_CartesianControl.cpp  pid.cpp  pid.h
Cohoma/Example_TorqueControl/: CMakeLists.txt
Cohoma/Example_TorqueControl/src/: Example_TorqueControl.cpp
Cohoma/TrajGen/include/TrajGen/: Traj_gen.hpp
Cohoma/TrajGen/src/: test_trajGen.cpp
Cohoma/Traj_CartesianOL/src/: Test_TrajOL.cpp
Jaco/: Test_URDF.py
Jaco/CompilantControl/: AdmittanceControl.py  AdmittanceControlqref.py  ImpedanceControl.py  ImpedanceControl_fc.py
Jaco/JointSpace/: ComputedTorque_AnglePositionControl.py
Jaco/TaskSpace/: TaskSpaceControl.py
TwoLink/JointSpace/: ComputedTorque_AnglePositionControl.py
puma560/CompilantControl/: AdmittanceControl.py  AdmittanceControl_qref.py  AdmittanceControl_qref0.py  AdmittanceControl_qref_Guidance.py  AdmittanceControl_qref_traj.py  AdmittanceControl_qref_v2.py  AdmittanceControl_v2.py  ImpedanceControl.py  ImpedanceControl_CartesianModel.py  ImpedanceControl_v2.py
puma560/JointSpace/: ComputedTorque_AnglePositionControl.py
puma560/TaskSpace/: TaskSpaceControl_v2.py  TaskSpace_InverseKinematics.py
